(fix): title and input colours (fix): spacing between inputs

--- a/src/app/modules/auth/login.component.scss
+++ b/src/app/modules/auth/login.component.scss
@@ -90,11 +90,15 @@ m-login {
         font-size: 36px;
         line-height: 48px;
         font-weight: bold;
+
+        @include m-theme() {
+          color: themed($m-grey-800);
+        }
       }
 
       .mdl-cell {
         margin: 0;
-        padding-bottom: 14px;
+        padding-bottom: 25px;
       }
 
       form {
@@ -112,6 +116,10 @@ m-login {
           padding: 10px 15px;
           height: 37px;
           font-weight: normal;
+
+          @include m-theme() {
+            color: themed($m-grey-800);
+          }
 
           &:active,
           &:focus {
